2011-10-27  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Fix bug: Init rcsdiff(1) auto var.

	Omission from 2011-10-13, "Remove ‘workptr’,
	‘workstat’ from global state of rcsdiff(1)".

	* rcsdiff.c (main): Clear out ‘work’.

2011-10-18  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build int] Use gnulib to implement ‘exiting’ func attribute.

	* base.h (exiting): Use ‘_Noreturn’ directly.

2011-10-18  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build int] Decruft: Remove obsolete handling for broken ‘printf %.2d’.

	* rcstime.c (proper_dot_2): Delete macro.
	(time2date, date2str): Use format string with ".2d" directly.

2011-10-16  Thien-Thi Nguyen  <ttn@gnuvola.org>

	co: Mention ‘-S’ in help text.

	Omission from 2011-10-11, "Add
	option ‘-S’ to enable "self-same" mode".

	* co.c: Mention ‘-S’ in help text.

2011-10-15  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Remove ‘rmvlocklst’ from global state of rcs(1).

	* rcs.c (struct admin_closure): Add member ‘byelocks’.
	(rmvlocklst): Delete var.
	(dolocks): Use ‘dc->byelocks’.
	(main): Use ‘dc.byelocks’.

2011-10-15  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Remove ‘newlocklst’ from global state of rcs(1).

	* rcs.c (struct admin_closure): Add member ‘newlocks’.
	(newlocklst): Delete var.
	(rmnewlocklst): Take arg ‘dc’; use ‘dc->newlocks’.
	(dolocks): Use ‘dc->newlocks’.
	(main): Use ‘dc.newlocks’; update call to ‘rmnewlocklst’.

2011-10-15  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Remove ‘delrev’ from global state of rcs(1).

	* rcs.c (struct admin_closure): Add member ‘delrev’.
	(putdelrev): Interpret arg ‘data’ to be ‘admin_closure *dc’;
	use ‘dc->delrev’.
	(removerevs): Use ‘dc->delrev’.
	(main): Use ‘dc.delrev’; update call to ‘parse_revpairs’.

2011-10-15  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Remove ‘lockhead’, ‘unlockcaller’ from global state of rcs(1).

	* rcs.c (struct admin_closure):
	Add members ‘lockhead’, ‘unlockcaller’.
	(lockhead, unlockcaller): Delete vars.