@@ -1,3 +1,10 @@
+2011-10-28  Thien-Thi Nguyen  <ttn@gnuvola.org>
+
+	[int] Add abstraction: COMMAND_LINE_VARYING
+
+	* rcsdiff.c (COMMAND_LINE_VARYING): New #define.
+	(main): Use ‘COMMAND_LINE_VARYING’.
+
 2011-10-27  Thien-Thi Nguyen  <ttn@gnuvola.org>
 
 	[int] Fix bug: Init rcsdiff(1) auto var.
